--- a/src/components/Tags/Tags.module.css
+++ b/src/components/Tags/Tags.module.css
@@ -5,30 +5,47 @@
     box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
 
     background: white;
+
+    padding: 1rem;
 }
 
 .headerRow {
-    margin-top: 1rem;
+
 }
 
 .header {
-    padding-left: 1rem;
+
 }
 
 .tagRows {
     margin-top: 1rem;
-    margin-left: 1rem;
 }
 
 .tagRow {
     display: flex;
     align-items: center;
 
-    margin-bottom: 1rem;
+    padding: .5rem;
+
+    margin-bottom: .5rem;
+
+    border-radius: 5px;
+
+    cursor: pointer;
+
+    transition: 0.2s;
+}
+
+.tagRow:last-child {
+    margin-bottom: 0;
+}
+
+.tagRow:hover {
+    background: #eee;
 }
 
 .hash {
     color: #9d9d9d;
 
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
