--- a/src/shared/LoginRegForm/LoginRegForm.module.css
+++ b/src/shared/LoginRegForm/LoginRegForm.module.css
@@ -5,10 +5,25 @@
     justify-content: center;
 
     margin-top: 1rem;
+
+    padding: 2rem 0;
+
+    border-radius: 5px;
+
+    box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
+
+    background: white;
+
+    min-width: 22rem;
+}
+
+.name {
+    margin-top: 1rem;
 }
 
 .email,
-.password {
+.password,
+.name {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -18,7 +33,8 @@
 }
 
 .email input,
-.password input {
+.password input,
+.name input {
     outline: none;
 
     border: 2px solid #eee;
@@ -28,7 +44,7 @@
 
     height: 1.5rem;
 
-    padding: .2rem;
+    padding: .2rem .5rem;
     margin-top: 0.2rem;
 
     font-size: inherit;
@@ -37,4 +53,8 @@
 .email input:focus,
 .password input:focus {
     border: 2px solid #2389fd;
+}
+
+.btn {
+    margin-top: 1rem;
 }
