--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -102,12 +102,14 @@
 
 .author {
     display: flex;
-
+    align-items: center;
 }
 
 .avatar {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
+
+    border-radius: 50%;
 
     margin-right: 0.5rem;
 }
@@ -119,11 +121,11 @@
 }
 
 .name {
-    font-size: 0.9rem;
+
 }
 
 .date {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
 
     color: #9d9d9d;
 }
@@ -151,11 +153,11 @@
 }
 
 .tagsContainer span {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 
     color: #9d9d9d;
 
-    margin-right: 1rem;
+    margin-right: .5rem;
 }
 
 .reactions {
@@ -180,5 +182,7 @@
 
 .views span,
 .comments span {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+
+    margin-left: .1rem;
 }
