realize comments functionality

--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -27,6 +27,14 @@
 
 }
 
+.hover {
+    transition: .2s;
+}
+
+.hover:hover {
+    background: #eee;
+}
+
 .actionMenu {
     position: absolute;
     top: 1rem;
