--- a/src/components/PostSkeleton/PostSkeleton.module.css
+++ b/src/components/PostSkeleton/PostSkeleton.module.css
@@ -1,6 +1,6 @@
 .post {
     width: 45rem;
-    height: 25rem;
+    height: auto;
 
     margin-bottom: 2rem;
 
@@ -10,7 +10,7 @@
 }
 
 .imgContainer {
-    height: 60%;
+    height: 15rem;
 
     background: #eee;
 
@@ -21,25 +21,21 @@
 }
 
 .content {
-    height: 40%;
-
     border-top: none;
     border-radius: 0 0 5px 5px;
 
+    padding: 1rem;
 
     box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
 .author {
     display: flex;
-
-    padding-top: 1rem;
-    padding-left: 0.5rem;
 }
 
 .avatar {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
 
     margin-right: 0.5rem;
 
@@ -60,8 +56,8 @@
 .name {
     background: #eee;
 
-    height: 1rem;
-    width: 3rem;
+    height: 1.2rem;
+    width: 6rem;
 
     box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7);
     animation: glowing 1.5s infinite;
@@ -72,15 +68,14 @@
 
     background: #eee;
 
-    height: .5rem;
-    width: 4rem;
+    height: .8rem;
+    width: 7rem;
 
     box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7);
     animation: glowing 1.5s infinite;
 }
 
 .headerContainer {
-    margin-top: .5rem;
     margin-left: 3rem;
 
     background: #eee;
