--- a/src/components/Tags/Tags.module.css
+++ b/src/components/Tags/Tags.module.css
@@ -44,8 +44,29 @@
     background: #eee;
 }
 
+.tagRowSkeleton {
+    height: 1rem;
+    width: inherit;
+    background: #eee;
+
+    box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7);
+    animation: glowing 1.5s infinite;
+}
+
 .hash {
     color: #9d9d9d;
 
     margin-right: 1rem;
+}
+
+@keyframes glowing {
+    0% {
+        box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7); /* Начальное свечение и прозрачность */
+    }
+    50% {
+        box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.3); /* Половина времени с меньшей прозрачностью */
+    }
+    100% {
+        box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7); /* Завершение с начальным свечением */
+    }
 }
