add sorting: new/popular/by tag, edit layout

--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -1,4 +1,5 @@
 .comments {
+    width: auto;
     max-width: 1024px;
 
     margin-top: 2rem;
@@ -131,6 +132,11 @@
 .text {
     margin-top: .5rem;
     margin-bottom: .2rem;
+
+    display: block;
+
+
+    word-wrap: break-word;
 }
 
 .editor {
