--- a/src/pages/PostPage/PostPage.module.css
+++ b/src/pages/PostPage/PostPage.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: start;
+
 }
 
 .pageContentWrapper {
@@ -13,6 +14,7 @@
     flex-direction: column;
 
     width: auto;
+    max-width: 1024px;
 }
 
 .post {
