--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -7,8 +7,12 @@
     position: relative;
 
     background: white;
-}
 
+    border: 2px solid transparent;
+    border-radius: 5px;
+
+    transition: border .2s;
+}
 
 .postSingle {
     position: relative;
@@ -17,49 +21,16 @@
 
     width: auto;
     max-width: 1024px;
-}
 
-.actionMenu {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-
-    padding: 0 0.3rem;
-
+    border: 2px solid transparent;
     border-radius: 5px;
 
-    background: #eee;
-
-    display: flex;
-    align-items: center;
-
-    transform: translateX(0);
-
-    transition: .2s;
+    transition: border .2s;
 }
 
-.hidden {
-    opacity: 0;
-    height: 0;
-    width: 0;
-    line-height: 0;
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-
-    transform: translateX(50px);
-}
-
-.edit {
-    font-size: 1.5rem;
-
-    margin-right: .5rem;
-
-    cursor: pointer;
-}
-
-.delete {
-    font-size: 1.5rem;
+.postHover {
+    border: 2px solid rgba(35, 137, 253);
+    border-radius: 5px;
 
     cursor: pointer;
 }
@@ -159,6 +130,18 @@
     color: #9d9d9d;
 
     margin-right: .5rem;
+}
+
+.tag {
+    cursor: pointer;
+
+    display: inline-block;
+
+    transition: .2s;
+}
+
+.tag:hover {
+    transform: scale(1.2);
 }
 
 .reactions {
