--- a/src/shared/LoginRegForm/LoginRegForm.module.css
+++ b/src/shared/LoginRegForm/LoginRegForm.module.css
@@ -76,6 +76,18 @@
     overflow: hidden;
 }
 
+.avatarSkeleton {
+    border-radius: 50%;
+
+    width: 150px;
+    height: 150px;
+
+    background: #eee;
+
+    box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7);
+    animation: glowing 1.5s infinite;
+}
+
 .avatarTip {
     position: absolute;
     right: 32%;
@@ -126,4 +138,16 @@
     overflow: hidden;
     padding: 0;
     margin: 0;
+}
+
+@keyframes glowing {
+    0% {
+        box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7); /* Начальное свечение и прозрачность */
+    }
+    50% {
+        box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.3); /* Половина времени с меньшей прозрачностью */
+    }
+    100% {
+        box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7); /* Завершение с начальным свечением */
+    }
 }
