--- a/src/components/Commentaries/CommentExcerpt/CommentExcerpt.module.css
+++ b/src/components/Commentaries/CommentExcerpt/CommentExcerpt.module.css
@@ -1,41 +1,3 @@
-.comments {
-    width: auto;
-    max-width: 1024px;
-
-    margin-top: 2rem;
-
-    padding: 1rem;
-
-    border-radius: 5px;
-    border: 2px solid #eee;
-
-    background: white;
-
-    box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
-}
-
-.commentsSingle {
-
-}
-
-.headerRow {
-}
-
-.header {
-}
-
-.commentRows {
-
-}
-
-.hover {
-    transition: .2s;
-}
-
-.hover:hover {
-    background: #eee;
-}
-
 .commentRow {
     display: flex;
     align-items: center;
@@ -50,6 +12,14 @@
     border-radius: 5px;
 
     box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.hover {
+    transition: .2s;
+}
+
+.hover:hover {
+    background: #eee;
 }
 
 .avatar {
@@ -104,4 +74,51 @@
 .sendBtn {
     margin-top: 1rem;
     margin-right: .5rem;
+}
+
+@media (max-width: 1920px) {
+
+}
+
+@media (max-width: 1280px) {
+
+}
+
+@media (max-width: 960px) {
+    .commentRow {
+        margin: 1rem;
+
+        height: 5rem;
+    }
+}
+
+@media (max-width: 640px) {
+    .avatar {
+        align-self: start;
+
+        width: 30px;
+        height: 30px;
+    }
+
+    .content {
+        align-self: start;
+    }
+
+    .name,
+    .date {
+        font-size: .9rem;
+    }
+
+}
+
+@media (max-width: 320px) {
+    .commentRow {
+        position: relative;
+    }
+
+    .text {
+        position: absolute;
+        top: 2.5rem;
+        left: .5rem;
+    }
 }
