--- a/src/components/Commentaries/CommentSkeleton/CommentSkeleton.module.css
+++ b/src/components/Commentaries/CommentSkeleton/CommentSkeleton.module.css
@@ -88,3 +88,9 @@
         box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7); /* Завершение с начальным свечением */
     }
 }
+
+@media (max-width: 960px) {
+    .commentRow {
+        margin-right: .5rem;
+    }
+}
