--- a/src/components/Tags/Tags.module.css
+++ b/src/components/Tags/Tags.module.css
@@ -36,12 +36,16 @@
     transition: 0.2s;
 }
 
-.tagRow:last-child {
-    margin-bottom: 0;
-}
+/*.tagRow:last-child {*/
+/*    margin-bottom: 0;*/
+/*}*/
 
 .tagRow:hover {
     background: #eee;
+}
+
+.tagSkeletonContainer {
+
 }
 
 .tagRowSkeleton {
@@ -54,6 +58,8 @@
 }
 
 .hash {
+    display: inline-block;
+
     color: #9d9d9d;
 
     margin-right: 1rem;
@@ -70,3 +76,50 @@
         box-shadow: inset 0 0 50px rgba(171, 171, 171, 0.7); /* Завершение с начальным свечением */
     }
 }
+
+@media (max-width: 1920px) {
+
+}
+
+@media (max-width: 1280px) {
+
+}
+
+@media (max-width: 960px) {
+    .tagSkeletonContainer {
+        display: flex;
+
+    }
+
+    .tagRowSkeleton {
+        width: 8rem;
+    }
+
+    .tagRows {
+        margin: 0;
+    }
+
+    .tagRow {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        height: 1.2rem;
+
+        margin: 1rem;
+
+        border: 2px solid #eee;
+        border-radius: 15px;
+
+        box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
+    }
+
+}
+
+@media (max-width: 720px) {}
+
+@media (max-width: 640px) {}
+
+@media (max-width: 480px) {}
+
+@media (max-width: 320px) {}
