fix redirect to comment, change logo and burger btn pos. < 960px

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -134,7 +134,13 @@
 
 @media (max-width: 1280px) {}
 
-@media (max-width: 960px) {}
+@media (max-width: 960px) {
+    .content {
+        justify-content: space-between;
+
+        padding: 0 1rem;
+    }
+}
 
 @media (max-width: 640px) {
     .burgerContent {
