--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -15,12 +15,12 @@
 }
 
 .postSingle {
+    width: 100%;
+    height: auto;
+
     position: relative;
 
     background: white;
-
-    width: auto;
-    max-width: 1024px;
 
     border: 2px solid transparent;
     border-radius: 5px;
@@ -38,27 +38,34 @@
 .imgContainer {
     overflow: hidden;
 
-    height: 60%;
-    max-height: 768px;
+    height: 50rem;
 
     border-radius: 5px 5px 0 0;
 }
 
 .img {
-    width: 1024px;
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
 }
 
 .imgContainerMulti {
-    max-height: 768px;
+    overflow: hidden;
+
+    height: 30rem;
+
+    border-radius: 5px 5px 0 0;
 }
 
 .imgMulti {
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
 }
 
 .content {
-    height: 40%;
-
     padding: 1rem;
 
     border-top: none;
@@ -178,13 +185,6 @@
         width: 30rem;
     }
 
-    .imgContainer {
-        max-height: 600px;
-    }
-
-    .img {
-        max-width: 100%;
-    }
 }
 
 @media (max-width: 960px) {
@@ -192,12 +192,20 @@
         width: auto;
     }
 
-    .img {
-        width: auto;
+    .imgContainer {
+        height: 35rem;
     }
 }
 
 @media (max-width: 640px) {
+    .imgContainer {
+        height: 20rem;
+    }
+
+    .imgContainerMulti {
+        height: 20rem;
+    }
+
     .postSingle .header {
         padding: 0;
     }
@@ -231,6 +239,14 @@
 }
 
 @media (max-width: 320px) {
+    .imgContainer {
+        height: 10rem;
+    }
+
+    .imgContainerMulti {
+        height: 10rem;
+    }
+
     .header {
         padding: 0;
     }
