--- a/src/pages/AddPost/AddPost.module.css
+++ b/src/pages/AddPost/AddPost.module.css
@@ -35,15 +35,16 @@
 .imgContainer {
     margin: .5rem 0;
 
-    width: inherit;
-    height: auto;
-    max-height: 600px;
+    height: 30rem;
 
     overflow: hidden;
 }
 
 .imgContainer img {
-    width: 800px;
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
 }
 
 .input {
@@ -143,36 +144,16 @@
 
         margin: 1rem;
     }
-
-    .imgContainer {
-        max-height: 480px;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .imgContainer img {
-        width: 640px;
-    }
 }
 
 @media (max-width: 640px) {
     .imgContainer {
-        min-height: 240px;
-    }
-
-    .imgContainer img {
-        width: 320px;
+        height: 20rem;
     }
 }
 
 @media (max-width: 320px) {
     .imgContainer {
-        min-height: 160px;
-    }
-
-    .imgContainer img {
-        width: 240px;
+        height: 10rem;
     }
 }
