--- a/src/shared/LoginRegForm/LoginRegForm.module.css
+++ b/src/shared/LoginRegForm/LoginRegForm.module.css
@@ -65,15 +65,20 @@
     cursor: pointer;
 
     margin-top: 1rem;
+
+    overflow: hidden;
+
+    width: 150px;
+    height: 150px;
 }
 
 .avatar img {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
 
     border-radius: 50%;
-
-    overflow: hidden;
 }
 
 .avatarSkeleton {
