--- a/src/shared/Button.module.css
+++ b/src/shared/Button.module.css
@@ -19,6 +19,22 @@
     transition: 0.2s;
 }
 
+.btn:disabled {
+    background: #fff;
+    color: #9d9d9d;
+    border: 2px solid #9d9d9d;
+
+    cursor: default;
+}
+
+.btn:disabled:hover {
+    background: #fff;
+    color: #9d9d9d;
+    border: 2px solid #9d9d9d;
+
+    cursor: default;
+}
+
 .primary {
     border: 2px solid #2389fd;
     background: #2389fd;
